--- a/web/css/style.css
+++ b/web/css/style.css
@@ -69,7 +69,7 @@ body {
 
 #navigation {
     background: #74A8F5;
-    border-top: 1px solid #ffffff;
+    border-top: 1px solid #000000;
     height: 25px;
     clear: both
 }
