--- a/web/css/style.css
+++ b/web/css/style.css
@@ -7,6 +7,10 @@ body {
     background: #eeeeee;
 }
 
+a {
+    text-decoration: none;
+}
+
 #wrap {
     width: 820px;
     margin: 0 auto;
@@ -71,7 +75,21 @@ body {
     background: #74A8F5;
     border-top: 1px solid #000000;
     height: 25px;
-    clear: both
+    line-height: 25px;
+    font-size: 15px;
+    clear: both;
+    color: white;
+}
+
+#navigation span {
+    display: block;
+    float: right;
+    margin-right: 10px;
+}
+
+#navigation a {
+    color: white;
+    text-decoration: none;
 }
 
 #navigation ul {
@@ -123,14 +141,14 @@ body {
 }
 
 #content h1 {
-    font-family: "Trebuchet MS", Arial, Helvetica;
+    font-family: "Trebuchet MS", Arial, Helvetica, monospace;
     padding: 0;
     margin: 0 0 15px 0;
     font-size: 2em;
 }
 
 #content h2 {
-    font-family: "Trebuchet MS", Arial, Helvetica;
+    font-family: "Trebuchet MS", Arial, Helvetica, monospace;
     padding: 0;
     margin: 0 0 15px 0;
     font-size: 1.5em;
@@ -159,8 +177,9 @@ body {
 
 #footer #footer_bg {
     background: url(../img/footer_bg.gif) repeat-x left bottom #85C329;
-    padding: 15px 15px 25px 15px;
+    padding: 15px 15px 20px 15px;
     border-top: 1px solid #7BB425;
+    font-size: 15px;
 }
 
 #footer #design {
